# qatsi

./: .gitattributes  AUTHORS  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  mirror.yml
docs/: diagram.tex
paper/: README.md  qatsi-technical-report.tex
paper/arxiv/: works.bib
src/: generator.rs  kdf.rs  lib.rs  main.rs  ui.rs  wordlist.rs
