[package]
name = "qatsi"
version = "1.0.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chacha20 = "0.9.1"
rpassword = "7.4.0"
zeroize = { version = "1.8.2", features = ["derive"] }
anyhow = "1.0.100"
blake2 = "0.10.6"
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.0"
unicode-normalization = "0.1.24"

[dev-dependencies]
sha2 = "0.10.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
