[package]
name = "qatsi"
version = "1.1.1"
authors = [
    "René Coignard <contact@renecoignard.com>",
    "Anton Rygin <anton.rygin@tu-dresden.de>"
]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Stateless secret generation via hierarchical memory-hard key derivation using Argon2id"
homepage = "https://coignard.org/qatsi"
repository = "https://github.com/coignard/qatsi"
readme = "README.md"
keywords = ["argon2", "kdf", "cryptography", "security", "stateless"]
categories = ["cryptography", "command-line-utilities"]
exclude = [".github/*"]

[lib]
name = "qatsi"
path = "src/lib.rs"

[[bin]]
name = "qatsi"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chacha20 = "0.9.1"
rpassword = "7.4.0"
zeroize = { version = "1.8.2", features = ["derive"] }
anyhow = "1.0.100"
blake2 = "0.10.6"
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
indicatif = "0.18.3"
unicode-normalization = "0.1.24"
supports-unicode = "3.0.0"
supports-color = "3.0.2"

[dev-dependencies]
sha2 = "0.10.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
